# my-first-chatbot-rag-basic-example

./: .gitignore  README.md  check.py  eva2.json  eva3.py  evaluation_results.json  evulate2.py  log  pyproject.toml
data/: sample.txt
src/: app.py  chat.py  evaluate.py  ingest.py
